Simplify PDU interface
